raylib.jai

DrawLineV :: (startPos: Vector2, endPos: Vector2, color: Color)  #foreign raylib_native "DrawLineV";
DrawLineEx :: (startPos: Vector2, endPos: Vector2, thick: float, color: Color)  #foreign raylib_native "DrawLineEx";
DrawLineBezier :: (startPos: Vector2, endPos: Vector2, thick: float, color: Color)  #foreign raylib_native "DrawLineBezier";
DrawLineStrip :: (points: *Vector2, numPoints: s32, color: Color)  #foreign raylib_native "DrawLineStrip";
DrawCircle :: (centerX: s32, centerY: s32, radius: float, color: Color)  #foreign raylib_native "DrawCircle";
DrawCircleSector :: (center: Vector2, radius: float, startAngle: s32, endAngle: s32, segments: s32, color: Color)  #foreign raylib_native "DrawCircleSector";
DrawCircleSectorLines :: (center: Vector2, radius: float, startAngle: s32, endAngle: s32, segments: s32, color: Color)  #foreign raylib_native "DrawCircleSectorLines";
DrawCircleGradient :: (centerX: s32, centerY: s32, radius: float, color1: Color, color2: Color)  #foreign raylib_native "DrawCircleGradient";
DrawCircleV :: (center: Vector2, radius: float, color: Color)  #foreign raylib_native "DrawCircleV";
DrawCircleLines :: (centerX: s32, centerY: s32, radius: float, color: Color)  #foreign raylib_native "DrawCircleLines";
DrawEllipse :: (centerX: s32, centerY: s32, radiusH: float, radiusV: float, color: Color)  #foreign raylib_native "DrawEllipse";
DrawEllipseLines :: (centerX: s32, centerY: s32, radiusH: float, radiusV: float, color: Color)  #foreign raylib_native "DrawEllipseLines";
DrawRing :: (center: Vector2, innerRadius: float, outerRadius: float, startAngle: s32, endAngle: s32, segments: s32, color: Color)  #foreign raylib_native "DrawRing";
DrawRingLines :: (center: Vector2, innerRadius: float, outerRadius: float, startAngle: s32, endAngle: s32, segments: s32, color: Color)  #foreign raylib_native "DrawRingLines";
DrawRectangle :: (posX: s32, posY: s32, width: s32, height: s32, color: Color)  #foreign raylib_native "DrawRectangle";
DrawRectangleV :: (position: Vector2, size: Vector2, color: Color)  #foreign raylib_native "DrawRectangleV";
DrawRectangleRec :: (rec: Rectangle, color: Color)  #foreign raylib_native "DrawRectangleRec";
DrawRectanglePro :: (rec: Rectangle, origin: Vector2, rotation: float, color: Color)  #foreign raylib_native "DrawRectanglePro";
DrawRectangleGradientV :: (posX: s32, posY: s32, width: s32, height: s32, color1: Color, color2: Color)  #foreign raylib_native "DrawRectangleGradientV";
DrawRectangleGradientH :: (posX: s32, posY: s32, width: s32, height: s32, color1: Color, color2: Color)  #foreign raylib_native "DrawRectangleGradientH";
DrawRectangleGradientEx :: (rec: Rectangle, col1: Color, col2: Color, col3: Color, col4: Color)  #foreign raylib_native "DrawRectangleGradientEx";
DrawRectangleLines :: (posX: s32, posY: s32, width: s32, height: s32, color: Color)  #foreign raylib_native "DrawRectangleLines";
DrawRectangleLinesEx :: (rec: Rectangle, lineThick: s32, color: Color)  #foreign raylib_native "DrawRectangleLinesEx";
DrawRectangleRounded :: (rec: Rectangle, roundness: float, segments: s32, color: Color)  #foreign raylib_native "DrawRectangleRounded";
DrawRectangleRoundedLines :: (rec: Rectangle, roundness: float, segments: s32, lineThick: s32, color: Color)  #foreign raylib_native "DrawRectangleRoundedLines";
DrawTriangle :: (v1: Vector2, v2: Vector2, v3: Vector2, color: Color)  #foreign raylib_native "DrawTriangle";
DrawTriangleLines :: (v1: Vector2, v2: Vector2, v3: Vector2, color: Color)  #foreign raylib_native "DrawTriangleLines";
DrawTriangleFan :: (points: *Vector2, numPoints: s32, color: Color)  #foreign raylib_native "DrawTriangleFan";
DrawTriangleStrip :: (points: *Vector2, pointsCount: s32, color: Color)  #foreign raylib_native "DrawTriangleStrip";
DrawPoly :: (center: Vector2, sides: s32, radius: float, rotation: float, color: Color)  #foreign raylib_native "DrawPoly";
DrawPolyLines :: (center: Vector2, sides: s32, radius: float, rotation: float, color: Color)  #foreign raylib_native "DrawPolyLines";
CheckCollisionRecs :: (rec1: Rectangle, rec2: Rectangle) -> bool #foreign raylib_native "CheckCollisionRecs";
CheckCollisionCircles :: (center1: Vector2, radius1: float, center2: Vector2, radius2: float) -> bool #foreign raylib_native "CheckCollisionCircles";
CheckCollisionCircleRec :: (center: Vector2, radius: float, rec: Rectangle) -> bool #foreign raylib_native "CheckCollisionCircleRec";
GetCollisionRec :: (rec1: Rectangle, rec2: Rectangle) -> Rectangle #foreign raylib_native "GetCollisionRec";
CheckCollisionPointRec :: (point: Vector2, rec: Rectangle) -> bool #foreign raylib_native "CheckCollisionPointRec";
CheckCollisionPointCircle :: (point: Vector2, center: Vector2, radius: float) -> bool #foreign raylib_native "CheckCollisionPointCircle";
CheckCollisionPointTriangle :: (point: Vector2, p1: Vector2, p2: Vector2, p3: Vector2) -> bool #foreign raylib_native "CheckCollisionPointTriangle";
LoadImage :: (fileName: *u8) -> Image #foreign raylib_native "LoadImage";
LoadImageEx :: (pixels: *Color, width: s32, height: s32) -> Image #foreign raylib_native "LoadImageEx";
LoadImagePro :: (data: *void, width: s32, height: s32, format: s32) -> Image #foreign raylib_native "LoadImagePro";
LoadImageRaw :: (fileName: *u8, width: s32, height: s32, format: s32, headerSize: s32) -> Image #foreign raylib_native "LoadImageRaw";
UnloadImage :: (image: Image)  #foreign raylib_native "UnloadImage";
ExportImage :: (image: Image, fileName: *u8)  #foreign raylib_native "ExportImage";
ExportImageAsCode :: (image: Image, fileName: *u8)  #foreign raylib_native "ExportImageAsCode";
GetImageData :: (image: Image) -> *Color #foreign raylib_native "GetImageData";
GetImageDataNormalized :: (image: Image) -> *Vector4 #foreign raylib_native "GetImageDataNormalized";
GenImageColor :: (width: s32, height: s32, color: Color) -> Image #foreign raylib_native "GenImageColor";
GenImageGradientV :: (width: s32, height: s32, top: Color, bottom: Color) -> Image #foreign raylib_native "GenImageGradientV";
GenImageGradientH :: (width: s32, height: s32, left: Color, right: Color) -> Image #foreign raylib_native "GenImageGradientH";
GenImageGradientRadial :: (width: s32, height: s32, density: float, inner: Color, outer: Color) -> Image #foreign raylib_native "GenImageGradientRadial";
GenImageChecked :: (width: s32, height: s32, checksX: s32, checksY: s32, col1: Color, col2: Color) -> Image #foreign raylib_native "GenImageChecked";
GenImageWhiteNoise :: (width: s32, height: s32, factor: float) -> Image #foreign raylib_native "GenImageWhiteNoise";
GenImagePerlinNoise :: (width: s32, height: s32, offsetX: s32, offsetY: s32, scale: float) -> Image #foreign raylib_native "GenImagePerlinNoise";
GenImageCellular :: (width: s32, height: s32, tileSize: s32) -> Image #foreign raylib_native "GenImageCellular";
ImageCopy :: (image: Image) -> Image #foreign raylib_native "ImageCopy";
ImageFromImage :: (image: Image, rec: Rectangle) -> Image #foreign raylib_native "ImageFromImage";
ImageText :: (text: *u8, fontSize: s32, color: Color) -> Image #foreign raylib_native "ImageText";
ImageTextEx :: (font: Font, text: *u8, fontSize: float, spacing: float, tint: Color) -> Image #foreign raylib_native "ImageTextEx";
ImageToPOT :: (image: *Image, fillColor: Color)  #foreign raylib_native "ImageToPOT";
ImageFormat :: (image: *Image, newFormat: s32)  #foreign raylib_native "ImageFormat";
ImageAlphaMask :: (image: *Image, alphaMask: Image)  #foreign raylib_native "ImageAlphaMask";
ImageAlphaClear :: (image: *Image, color: Color, threshold: float)  #foreign raylib_native "ImageAlphaClear";
ImageAlphaCrop :: (image: *Image, threshold: float)  #foreign raylib_native "ImageAlphaCrop";
ImageAlphaPremultiply :: (image: *Image)  #foreign raylib_native "ImageAlphaPremultiply";
ImageCrop :: (image: *Image, crop: Rectangle)  #foreign raylib_native "ImageCrop";
ImageResize :: (image: *Image, newWidth: s32, newHeight: s32)  #foreign raylib_native "ImageResize";
ImageResizeNN :: (image: *Image, newWidth: s32, newHeight: s32)  #foreign raylib_native "ImageResizeNN";
ImageResizeCanvas :: (image: *Image, newWidth: s32, newHeight: s32, offsetX: s32, offsetY: s32, color: Color)  #foreign raylib_native "ImageResizeCanvas";
ImageMipmaps :: (image: *Image)  #foreign raylib_native "ImageMipmaps";
ImageDither :: (image: *Image, rBpp: s32, gBpp: s32, bBpp: s32, aBpp: s32)  #foreign raylib_native "ImageDither";
ImageFlipVertical :: (image: *Image)  #foreign raylib_native "ImageFlipVertical";
ImageFlipHorizontal :: (image: *Image)  #foreign raylib_native "ImageFlipHorizontal";
ImageRotateCW :: (image: *Image)  #foreign raylib_native "ImageRotateCW";
ImageRotateCCW :: (image: *Image)  #foreign raylib_native "ImageRotateCCW";
ImageColorTint :: (image: *Image, color: Color)  #foreign raylib_native "ImageColorTint";
ImageColorInvert :: (image: *Image)  #foreign raylib_native "ImageColorInvert";
ImageColorGrayscale :: (image: *Image)  #foreign raylib_native "ImageColorGrayscale";
ImageColorContrast :: (image: *Image, contrast: float)  #foreign raylib_native "ImageColorContrast";
ImageColorBrightness :: (image: *Image, brightness: s32)  #foreign raylib_native "ImageColorBrightness";
ImageColorReplace :: (image: *Image, color: Color, replace: Color)  #foreign raylib_native "ImageColorReplace";
ImageExtractPalette :: (image: Image, maxPaletteSize: s32, extractCount: *s32) -> *Color #foreign raylib_native "ImageExtractPalette";
GetImageAlphaBorder :: (image: Image, threshold: float) -> Rectangle #foreign raylib_native "GetImageAlphaBorder";
ImageClearBackground :: (dst: *Image, color: Color)  #foreign raylib_native "ImageClearBackground";
ImageDrawPixel :: (dst: *Image, posX: s32, posY: s32, color: Color)  #foreign raylib_native "ImageDrawPixel";
ImageDrawPixelV :: (dst: *Image, position: Vector2, color: Color)  #foreign raylib_native "ImageDrawPixelV";
ImageDrawLine :: (dst: *Image, startPosX: s32, startPosY: s32, endPosX: s32, endPosY: s32, color: Color)  #foreign raylib_native "ImageDrawLine";
ImageDrawLineV :: (dst: *Image, start: Vector2, end: Vector2, color: Color)  #foreign raylib_native "ImageDrawLineV";
ImageDrawCircle :: (dst: *Image, centerX: s32, centerY: s32, radius: s32, color: Color)  #foreign raylib_native "ImageDrawCircle";
ImageDrawCircleV :: (dst: *Image, center: Vector2, radius: s32, color: Color)  #foreign raylib_native "ImageDrawCircleV";
ImageDrawRectangle :: (dst: *Image, posX: s32, posY: s32, width: s32, height: s32, color: Color)  #foreign raylib_native "ImageDrawRectangle";
ImageDrawRectangleV :: (dst: *Image, position: Vector2, size: Vector2, color: Color)  #foreign raylib_native "ImageDrawRectangleV";
ImageDrawRectangleRec :: (dst: *Image, rec: Rectangle, color: Color)  #foreign raylib_native "ImageDrawRectangleRec";
ImageDrawRectangleLines :: (dst: *Image, rec: Rectangle, thick: s32, color: Color)  #foreign raylib_native "ImageDrawRectangleLines";
ImageDraw :: (dst: *Image, src: Image, srcRec: Rectangle, dstRec: Rectangle, tint: Color)  #foreign raylib_native "ImageDraw";
ImageDrawText :: (dst: *Image, position: Vector2, text: *u8, fontSize: s32, color: Color)  #foreign raylib_native "ImageDrawText";
ImageDrawTextEx :: (dst: *Image, position: Vector2, font: Font, text: *u8, fontSize: float, spacing: float, color: Color)  #foreign raylib_native "ImageDrawTextEx";
LoadTexture :: (fileName: *u8) -> Texture2D #foreign raylib_native "LoadTexture";
LoadTextureFromImage :: (image: Image) -> Texture2D #foreign raylib_native "LoadTextureFromImage";
LoadTextureCubemap :: (image: Image, layoutType: s32) -> TextureCubemap #foreign raylib_native "LoadTextureCubemap";
LoadRenderTexture :: (width: s32, height: s32) -> RenderTexture2D #foreign raylib_native "LoadRenderTexture";
UnloadTexture :: (texture: Texture2D)  #foreign raylib_native "UnloadTexture";
